--- a/src/components/breaks/Breaks.css
+++ b/src/components/breaks/Breaks.css
@@ -1,23 +1,23 @@
 .wall-block {
-    width: 4vw;
-    height: 4vw;
+    width: 2vw;
+    height: 2vw;
     background-color: black;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: center;
+    align-items: stretch;
 
 }
 
 .wall-stone {
-    width: 1.9vw;
-    height: 0.9vw;
-    margin: 0vw 0.05vw 0vw 0.05vw;
+    width: 0.95vw;
+    height: 0.445vw;
+    margin: 0vw 0.025vw 0vw 0.025vw;
     background-color: red;
 }
 
 .wall-stone-half {
-    width: 0.95vw;
-    height: 0.9vw;
+    width: 0.475vw;
+    height: 0.445vw;
     background-color: red;
 }
