--- a/src/components/breaks/Breaks.less
+++ b/src/components/breaks/Breaks.less
@@ -10,7 +10,7 @@
     &-stone {
         width: 1.8rem;
         height: 0.9rem;
-        margin: 0vw 0.1rem 0vw 0.1rem;
+        margin: 0 0.1rem 0 0.1rem;
         background-color: rgb(160, 54, 35);
     }
 
