--- a/src/components/spider/Spider.less
+++ b/src/components/spider/Spider.less
@@ -7,7 +7,7 @@
     &-body {
         border-radius: 50% 50% 0 0;
         width: 4rem;
-        height: 3vw;
+        height: 3rem;
         display: flex;
         justify-content: space-around;
         align-items: center;
