--- a/src/index.less
+++ b/src/index.less
@@ -1,6 +1,24 @@
 html, body {
   margin: 0;
   padding: 0;
-  font-size: 10px;
+
   font-family: sans-serif;
+}
+
+@media (min-width:1024px) {
+  html, body {
+    font-size: 10px;
+  }
+}
+
+@media (max-width:1023px) and (min-width: 768px) {
+  html, body {
+    font-size: 5px;
+  }
+}
+
+@media (max-width:767px) {
+  html, body {
+    font-size: 3px;
+  }
 }
