--- a/src/components/spider/Spider.less
+++ b/src/components/spider/Spider.less
@@ -25,8 +25,8 @@
         background-color: green;
     }
 
-    &-yellow &-body,&-yellow &-claw {
-        background-color: yellow;
+    &-orange &-body,&-orange &-claw {
+        background-color: orange;
     }
 
     &-drugged &-body,&-drugged &-claw {
