--- a/src/components/pacman/Pacman.less
+++ b/src/components/pacman/Pacman.less
@@ -5,7 +5,7 @@
     font-size: 2rem;
 
     &-top{
-        background-color: yellow;
+        background-color: gold;
         height: 1.5rem;
         width: 3rem;
         border-radius: 1.5rem 1.5rem 0 0;
@@ -15,7 +15,7 @@
     }
 
     &-bottom{
-        background-color: yellow;
+        background-color: gold;
         height: 1.5rem;
         width: 3rem;
         border-radius: 0 0 1.5rem 1.5rem;
@@ -30,11 +30,11 @@
 
 @keyframes spin2 {
     0%  {transform: rotate(0deg);}
-    50%{transform: rotate(35deg);}
+    50% {transform: rotate(35deg);}
 }
 
 
 @keyframes spin1 {
     0%  {transform: rotate(0deg);}
-    50%{transform: rotate(-35deg);}
+    50% {transform: rotate(-35deg);}
 }
