--- a/src/components/way/Way.less
+++ b/src/components/way/Way.less
@@ -6,21 +6,21 @@
     justify-content: center;
     align-items: center;
 
-    &-block.feed > div {
+    &.feed > div {
         background-color: darkmagenta;
         width: 0.5rem;
         height: 0.5rem;
         border-radius:0.2rem;
     }
 
-    &-block.tablet > div {
+    &.tablet > div {
         background-color: cornflowerblue;
         width: 1.5rem;
         height: 1.5rem;
         border-radius:100%;
     }
 
-    &-block.empty > div {
+    &.empty > div {
         background-color: transparent;
     }
 }
