--- a/src/index.less
+++ b/src/index.less
@@ -1,7 +1,9 @@
 html, body {
   margin: 0;
   padding: 0;
-
+  display: flex;
+  justify-content: center;
+  align-content: center;
   font-family: sans-serif;
 }
 
