--- a/src/components/way/Way.less
+++ b/src/components/way/Way.less
@@ -13,7 +13,7 @@
     border-radius: 0.2rem;
   }
 
-  &.tablet > div {
+  &.pill > div {
     background-color: cornflowerblue;
     width: 1.5rem;
     height: 1.5rem;
