changed walls class names

--- a/src/components/breaks/Breaks.less
+++ b/src/components/breaks/Breaks.less
@@ -9,14 +9,14 @@
   justify-content: space-between;
   align-items: stretch;
 
-  &-stone {
+  & .stone {
     width: 1.8rem;
     height: 0.9rem;
     margin: 0 0.1rem 0 0.1rem;
     background-color: @stoneColor;
   }
 
-  &-stone-half {
+  & .stone-half {
     width: 0.9rem;
     height: 0.9rem;
     background-color: @stoneColor;
