changed pacman class names

--- a/src/components/pacman/Pacman.less
+++ b/src/components/pacman/Pacman.less
@@ -11,7 +11,7 @@
   left: 24rem;
   /*temporary coords*/
 
-  &-top {
+  & .top {
     background-color: gold;
     height: 1.5rem;
     width: 3rem;
@@ -21,7 +21,7 @@
     text-align: center;
   }
 
-  &-bottom {
+  & .bottom {
     background-color: gold;
     height: 1.5rem;
     width: 3rem;
@@ -30,7 +30,7 @@
     z-index: 3;
   }
 
-  &-turn-top {
+  & .turn-top {
     transform: rotate(270deg);
   }
 
