--- a/src/components/spider/Spider.less
+++ b/src/components/spider/Spider.less
@@ -81,80 +81,87 @@
     height: 0.6rem;
   }
 
+  &.turn-left .bottom {
+    justify-content: flex-start;
+  }
+
+  &.turn-right .bottom{
+    justify-content: flex-end;
+  }
+
+  &.turn-right .eyes{
+    justify-content: flex-end;
+    align-items: center;
+    transition: all 0.3s ease-out;
+  }
+
+  &.turn-left .eyes{
+    justify-content: flex-start;
+    align-items: center;
+    transition: all 0.3s ease-out;
+  }
+
+  &.turn-top .eyes {
+    align-items: flex-start;
+    justify-content: center;
+    transition: all 0.3s ease-out;
+  }
+
+  &.turn-bottom .eyes {
+    align-items: flex-end;
+    justify-content: center;
+    transition: all 0.3s ease-out;
+  }
+
+  &.turn-right .claws, &.turn-left .claws {
+    width: 90%;
+    transition: all 0.3s ease-out;
+  }
+
   &.move {
+    &-left, &-right, &-top, &-bottom {
+      animation-duration: 0.6s;
+      animation-direction: normal;
+      animation-iteration-count: 1;
+      animation-fill-mode: backwards;
+      animation-timing-function: linear;
+    }
     &-left {
-      animation: move-left 1s 1 linear;
+      animation-name: move-left;
     }
 
     &-right {
-      animation: move-right 1s 1 linear;
+      animation-name: move-right;
     }
 
     &-top {
-      animation: move-top 1s 1 linear;
+      animation-name: move-top;
     }
 
     &-bottom {
-      animation: move-bottom 1s 1 linear;
-    }
-
-    &-right .bottom {
-      justify-content: flex-start;
-    }
-
-    &-left .bottom {
-      justify-content: flex-end;
-    }
-
-    &-left .eyes {
-      justify-content: flex-end;
-      align-items: center;
-      transition: all 0.3s ease-out;
-    }
-
-    &-right .eyes {
-      justify-content: flex-start;
-      align-items: center;
-      transition: all 0.3s ease-out;
-    }
-
-    &-top .eyes {
-      align-items: flex-start;
-      justify-content: center;
-      transition: all 0.3s ease-out;
-    }
-
-    &-bottom .eyes {
-      align-items: flex-end;
-      justify-content: center;
-      transition: all 0.3s ease-out;
-    }
-
-    &-right .claws, &-left .claws {
-      width: 90%;
-      transition: all 0.3s ease-out;
+      animation-name: move-bottom;
     }
 
     @keyframes move-left {
+      to {
+        transform:translateX(-4rem);
+      }
+    }
+
+    @keyframes move-right {
       to {
         transform:translateX(4rem);
       }
     }
 
-    @keyframes move-right {
-      100% {
-        transform:translateX(-4rem);
-      }
-    }
-
     @keyframes move-top {
-      100% {
+      to {
         transform:translateY(-4rem);
       }
     }
 
     @keyframes move-bottom {
-      100% {
+      to {
         transform:translateY(4rem);
       }
     }
