added part of the game logic

--- a/src/App.less
+++ b/src/App.less
@@ -1,9 +1,11 @@
 .App {
   position: relative;
+  overflow: hidden;
 }
 .field {
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .field > .row {
