--- a/src/components/spider/Spider.less
+++ b/src/components/spider/Spider.less
@@ -101,13 +101,13 @@
     transition: all 0.3s ease-out;
   }
 
-  &.turn-top .eyes {
+  &.turn-up .eyes {
     align-items: flex-start;
     justify-content: center;
     transition: all 0.3s ease-out;
   }
 
-  &.turn-bottom .eyes {
+  &.turn-down .eyes {
     align-items: flex-end;
     justify-content: center;
     transition: all 0.3s ease-out;
@@ -119,7 +119,7 @@
   }
 
   &.move {
-    &-left, &-right, &-top, &-bottom {
+    &-left, &-right, &-up, &-down {
       animation-duration: 0.6s;
       animation-direction: normal;
       animation-iteration-count: 1;
@@ -134,12 +134,12 @@
       animation-name: move-right;
     }
 
-    &-top {
-      animation-name: move-top;
+    &-up {
+      animation-name: move-up;
     }
 
-    &-bottom {
-      animation-name: move-bottom;
+    &-down {
+      animation-name: move-down;
     }
 
     @keyframes move-left {
@@ -154,13 +154,13 @@
       }
     }
 
-    @keyframes move-top {
+    @keyframes move-up {
       to {
         transform:translateY(-4rem);
       }
     }
 
-    @keyframes move-bottom {
+    @keyframes move-down {
       to {
         transform:translateY(4rem);
       }
