--- a/src/components/spider/Spider.less
+++ b/src/components/spider/Spider.less
@@ -125,6 +125,11 @@
       animation-fill-mode: backwards;
       animation-timing-function: linear;
     }
+
+    &-left.drugged, &-right.drugged, &-up.drugged, &-down.drugged {
+      animation-duration: 1s;
+    }
+
     &-left {
       animation-name: move-left;
     }
