--- a/src/components/spider/Spider.less
+++ b/src/components/spider/Spider.less
@@ -126,7 +126,10 @@
       animation-timing-function: linear;
     }
 
-    &-left.drugged, &-right.drugged, &-up.drugged, &-down.drugged {
+    &-left.drugged,
+    &-right.drugged,
+    &-up.drugged,
+    &-down.drugged {
       animation-duration: 1s;
     }
 
