--- a/src/components/spider/Spider.less
+++ b/src/components/spider/Spider.less
@@ -147,6 +147,12 @@
       animation-duration: 1s;
     }
 
+    &-speed-3.drugged.eaten,
+    &-speed-2.drugged.eaten,
+    &-speed-1.drugged.eaten {
+      animation-duration: 0.4s;
+    }
+
     &-left {
       animation-name: move-left;
     }
